Some mobile responsive fixes and body overflow fix, also added a standard wrapper to pages that arent the home page - Developed on wrong branch

--- a/client/src/components/GithubBanner/style.scss
+++ b/client/src/components/GithubBanner/style.scss
@@ -33,6 +33,9 @@
         height: 30px;
         transform: rotateZ(315deg) translate(-162px, -32px);
         font-weight: 500;
-        font-size: 14px;
+
+        & p {
+            font-size: 14px;
+        }
     }
 }
