--- a/client/src/globalStyle.scss
+++ b/client/src/globalStyle.scss
@@ -15,6 +15,7 @@
 
 body{
     background-color: #444444;
+    overflow-x: hidden;
 }
 
 p, li, a {
@@ -34,7 +35,6 @@ main {
     font-family: "Camber", sans-serif;
     display: flex;
     align-items: center;
-    justify-content: center;
     min-height: 100vh;
     font-size: 3rem;
     width: 100vw;
@@ -42,6 +42,12 @@ main {
     height: auto;
 }
 
+
+.wrapper {
+    width: 90%;
+    max-width: 800px;
+    margin: 100px 0px;
+}
 
 
 
